<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_background"
    tools:context=".SeatSelection">

    <TextView
        android:id="@+id/titleSeats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/movie_selection_title"
        android:textAllCaps="true"
        android:textColor="@color/accent_yellow"
        android:textSize="@dimen/title_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/titleDivider"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="24dp"
        android:background="@color/accent_yellow"
        app:layout_constraintBottom_toBottomOf="@+id/titleSeats"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/titleSeats"
        app:layout_constraintTop_toTopOf="@+id/titleSeats" />

    <LinearLayout
        android:id="@+id/screenLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@+id/titleSeats"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/screen_indicator"
            android:textAlignment="center"
            android:background="@color/screen_orange"
            android:textColor="@color/white_text"
            android:textSize="20sp"
            android:textStyle="italic"
            android:paddingVertical="8dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/seatContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/screenLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioGroup
            android:id="@+id/row1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="5dp">
            <RadioButton android:id="@+id/seat_1_1" style="@style/SeatRadioButton" android:text="A1" android:tag="A1"/>
            <RadioButton android:id="@+id/seat_1_2" style="@style/SeatRadioButton" android:text="A2" android:tag="A2"/>
            <RadioButton android:id="@+id/seat_1_3" style="@style/SeatRadioButton" android:text="A3" android:tag="A3"/>
            <RadioButton android:id="@+id/seat_1_4" style="@style/SeatRadioButton" android:text="A4" android:tag="A4"/> <RadioButton android:id="@+id/seat_1_5" style="@style/SeatRadioButton" android:text="A5" android:tag="A5"/>
            <RadioButton android:id="@+id/seat_1_6" style="@style/SeatRadioButton" android:text="A6" android:tag="A6"/>
        </RadioGroup>

        <RadioGroup
            android:id="@+id/row2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="5dp">
            <RadioButton android:id="@+id/seat_2_1" style="@style/SeatRadioButton" android:text="B1" android:tag="B1"/>
            <RadioButton android:id="@+id/seat_2_2" style="@style/SeatRadioButton" android:text="B2" android:tag="B2"/>
            <RadioButton android:id="@+id/seat_2_3" style="@style/SeatRadioButton" android:text="B3" android:tag="B3"/>
            <RadioButton android:id="@+id/seat_2_4" style="@style/SeatRadioButton" android:text="B4" android:tag="B4"/>
            <RadioButton android:id="@+id/seat_2_5" style="@style/SeatRadioButton" android:text="B5" android:tag="B5"/>
            <RadioButton android:id="@+id/seat_2_6" style="@style/SeatRadioButton" android:text="B6" android:tag="B6"/>
        </RadioGroup>

        <RadioGroup
            android:id="@+id/row3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="5dp">
            <RadioButton android:id="@+id/seat_3_1" style="@style/SeatRadioButton" android:text="C1" android:tag="C1"/>
            <RadioButton android:id="@+id/seat_3_2" style="@style/SeatRadioButton" android:text="C2" android:tag="C2"/>
            <RadioButton android:id="@+id/seat_3_3" style="@style/SeatRadioButton" android:text="C3" android:tag="C3"/>
            <RadioButton android:id="@+id/seat_3_4" style="@style/SeatRadioButton" android:text="C4" android:tag="C4"/>
            <RadioButton android:id="@+id/seat_3_5" style="@style/SeatRadioButton" android:text="C5" android:tag="C5"/>
            <RadioButton android:id="@+id/seat_3_6" style="@style/SeatRadioButton" android:text="C6" android:tag="C6"/>
        </RadioGroup>

        <RadioGroup
            android:id="@+id/row4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="5dp">
            <RadioButton android:id="@+id/seat_4_1" style="@style/SeatRadioButton" android:text="D1" android:tag="D1"/>
            <RadioButton android:id="@+id/seat_4_2" style="@style/SeatRadioButton" android:text="D2" android:tag="D2"/>
            <RadioButton android:id="@+id/seat_4_3" style="@style/SeatRadioButton" android:text="D3" android:tag="D3"/>
            <RadioButton android:id="@+id/seat_4_4" style="@style/SeatRadioButton" android:text="D4" android:tag="D4"/>
            <RadioButton android:id="@+id/seat_4_5" style="@style/SeatRadioButton" android:text="D5" android:tag="D5"/>
            <RadioButton android:id="@+id/seat_4_6" style="@style/SeatRadioButton" android:text="D6" android:tag="D6"/>
        </RadioGroup>

        <RadioGroup
            android:id="@+id/row5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="5dp">
            <RadioButton android:id="@+id/seat_5_1" style="@style/SeatRadioButton" android:text="E1" android:tag="E1"/>
            <RadioButton android:id="@+id/seat_5_2" style="@style/SeatRadioButton" android:text="E2" android:tag="E2"/>
            <RadioButton android:id="@+id/seat_5_3" style="@style/SeatRadioButton" android:text="E3" android:tag="E3"/>
            <RadioButton android:id="@+id/seat_5_4" style="@style/SeatRadioButton" android:text="E4" android:tag="E4"/>
            <RadioButton android:id="@+id/seat_5_5" style="@style/SeatRadioButton" android:text="E5" android:tag="E5"/>
            <RadioButton android:id="@+id/seat_5_6" style="@style/SeatRadioButton" android:text="E6" android:tag="E6"/>
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/legendLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/seatContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_marginHorizontal="8dp">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/icon_seat_available"
                android:contentDescription="@string/legend_available" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/legend_available"
                android:textColor="@color/white_text"
                android:textSize="12sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_marginHorizontal="8dp">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/icon_seat_unavailable"
                android:contentDescription="@string/legend_unavailable" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/legend_unavailable"
                android:textColor="@color/white_text"
                android:textSize="12sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_marginHorizontal="8dp">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/icon_seat_selected"
                android:contentDescription="@string/legend_your_selection" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/legend_your_selection"
                android:textColor="@color/white_text"
                android:textSize="12sp"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/confirmButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/button_background_selector" android:text="@string/confirm_button_text"
        android:textColor="@color/black_text"
        android:textSize="18sp"
        android:paddingVertical="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>